test/corpus/cargo_build.txt
===========
Cargo build
===========

   Compiling emma_app v0.1.0 (/var/home/nbishop/src/emma-editor/app)
error[E0425]: cannot find value `y` in this scope
  --> app/src/state/event.rs:46:9
   |
46 |         y = 1;
   |         ^
   |
help: a local variable with a similar name exists
   |
46 -         y = 1;
46 +         x = 1;
   |
help: you might have meant to introduce a new binding
   |
46 |         let y = 1;
   |         +++

For more information about this error, try `rustc --explain E0425`.
error: could not compile `emma_app` (lib) due to 1 previous error

---

(log
  (junk_lines)
  (diag
    (diag_level)
    (message)
    (source_ref))
  (junk_lines)
  (junk_lines)
  (ERROR
    (diag_level))
  (junk_lines)
)
